adjusted homepage & moviePoster files

--- a/front-end/src/styles/Homepage.css
+++ b/front-end/src/styles/Homepage.css
@@ -1,76 +1,37 @@
-body {
-    background-color: rgb(58, 58, 58);
+/* body { */
+/*     background-color: rgb(58, 58, 58); */
+/* } */
+/**/
+/**/
+/* .header{ */
+/*     max-width: 100%; */
+/*     background-color: rgba(255, 166, 0, 0.789); */
+/*     color: black; */
+/*     margin-top: -1rem; */
+/*     padding: 1rem */
+/* } */
+
+.homepage-card-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 2rem;
+  padding: 3rem;
 }
 
-
-.header{
-    max-width: 100%;
-    background-color: rgba(255, 166, 0, 0.789);
-    color: black;
-    margin-top: -1rem;
-    padding: 1rem
+@media (max-width: 400px) {
+  .homepage-card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
-.homepage-card-container{
-    margin: 0 auto;
-    margin-top: 20vh;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 3rem;
-    padding: 5rem;
+@media (min-width: 400px) and (max-width: 600px) {
+  .homepage-card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-.cards {
-    background-color: rgba(255, 166, 0, 0.789);
-    color: rgb(58, 58, 58);
-    padding: 1rem;
-    height: auto;
-    -webkit-transition: all 0.65s ease;
-    transition: all 0.65s ease;
-    border-radius: 25px;
-
+@media (min-width: 600px) and (max-width: 900px) {
+  .homepage-card-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
-
-.cards img {
-    width: 100%;
-    object-fit: cover;
-}
-
-.card-text{
-    text-align: center;
-}
-
-.cards button{
-    width: auto;
-    border-radius: 25px;
-    text-align: center;
-    padding: 15px 40px;
-    background-color: rgba(255, 255, 255, 0.789);
-    font-size: 12px;
-    margin-left: auto;
-    box-shadow:  0px 2px 6px -1px rgba(0,0,0,.13); 
-}
-
-.cards:hover {
-    box-shadow: 0 40px 130px rgba(0, 0, 0, 0.6);
-    -webkit-transform: scale(1.1, 1.1);
-    transform: scale(1.1, 1.1);
-}
-
-@media (min-width: 600px){
-    .cards {grid-template-columns: repeat(2, 1fr);}
-}
-
-@media (min-width: 900px){
-    .cards {grid-template-columns: repeat(3, 1fr);}
-}
-
-.hide_button{
-    display: none;
-}
-
-.show_button{
-    display: grid
-}
-
