--- a/front-end/src/styles/Show.css
+++ b/front-end/src/styles/Show.css
@@ -13,13 +13,19 @@
     border-bottom-left-radius: 25px;
 }
 
-.show-image-container img{
+/* .show-image-container img{
     width: 100%; 
     height: 100%;
     object-fit: cover;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
-}
+} */
+
+.image {
+    height: 100%;
+    background-size: cover;
+  }
+  
 
 .show-text-container {
     grid-column: 2 / span 2;
