--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -1,18 +1,20 @@
 body {
-    background-color: rgb(58, 58, 58);
+    background-color: #2E353E;
 }
 
 .login-signup-container{
     display: grid;
     gap: 0px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     padding: 5em;
     position: relative;
+    align-items: start;
+    color: #1D5047;
 }
 
 .image-container{
     grid-column: 1;
-    border: solid  rgb(255, 166, 0);
+    border: solid  #F6D563;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
 }
@@ -25,10 +27,10 @@ body {
     border-bottom-left-radius: 25px;
 }
 
-.login-container{
-    grid-column: 2 / span 2;
-    border: solid rgb(255, 166, 0);
-    background-color: rgb(224, 224, 224);
+.form-container{
+    grid-column: 2 ;
+    border: solid #F6D563;
+    background-color: #e9d9a3;
     padding: 3rem;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -38,13 +40,37 @@ input{
     margin: 1rem;
 }
 
-button{
+label{
+    width: 1rem;
+    display: inline-block;
+}
+
+.login-signup-container button{
+    border: 0 solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+    outline: 1px solid;
+    outline-color: #e9d9a3;
+    outline-offset: 0px;
+    text-shadow: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
     width: auto;
-    border-radius: 25px;
+    border-radius: 10px;
     text-align: center;
     padding: 15px 40px;
-    background-color: rgba(255, 166, 0, 0.789);
+    background-color: #24857A;
     font-size: 12px;
     margin-left: auto;
-    box-shadow:  0px 2px 6px -1px rgba(0,0,0,.13); 
+    color: #EFD478;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
+
+
+.login-signup-container button:hover{
+    border: 1px solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: #e9d9a3;
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; 
+}
+  
