--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,21 +1,47 @@
-body {
-    background-color: rgb(58, 58, 58);
-}
 
 .header{
     max-width: 100%;
-    background-color: rgba(255, 166, 0, 0.789);
-    color: black;
-    margin-top: -1rem;
+    background-color: #EFD478;
+    color: #1D5047;
+    margin: -1rem;
     padding: 1rem;
 }
 
-.buttons{
-    float: right;
-    
+.navbar-container button{
+    color: #EFD478;
+    background-color: #1D5047;
+    padding: 14px 16px;
+    margin: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    border: 0 solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+    outline: 1px solid;
+    outline-color: #e9d9a3;
+    outline-offset: 0px;
+    text-shadow: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .navbar-container{
     max-width: 100%;
-    display: grid;
+}
+
+li {
+    float: right;
+}
+
+ul{
+    list-style-type: none;
+    margin-top: -85px;
+    overflow: hidden;
+}
+
+.navbar-container button:hover{
+    border: 1px solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: #EFD478;
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; 
 }
