--- a/front-end/src/styles/movie-poster.css
+++ b/front-end/src/styles/movie-poster.css
@@ -1,6 +1,6 @@
 .cards {
-  background-color: rgba(255, 166, 0, 0.789);
-  color: rgb(58, 58, 58);
+  background-color: #EFD478;
+  color: #1D5047;
   padding: 8px;
   height: 400px;
   -webkit-transition: all 0.65s ease;
