--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 100vh; 
   flex-direction: column;
+  width: 100vw;
 }
 
 .addshow-nav {
@@ -10,27 +11,39 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
+.addshow-nav input:focus {
+  outline: none;
+}
+
 .addshow-nav input {
   text-align: center;
 }
 
 .addshow-nav button {
   padding: 5px 10px;
-  border-radius: 5px;
+  border-radius: 2px;
+  cursor: pointer;
+  border: none;
 }
 
 .addshow-bottom {
-  height: 100%;
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100%;
+
 }
 
 .addshow-main {
-  width: 70%;
-  background-color: blue;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ); 
+  padding: 20px;
+  gap: 20px;
 }
 
 .addshow-side {
-  background-color: red;
+  display: none;
   height: 100%;
   width: 30%;
   display: flex;
