--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -1,6 +1,6 @@
 .addshow-home {
   display: flex;
-  height: 100vh; 
+  height: 100vh;
   flex-direction: column;
   width: 100vw;
 }
@@ -17,6 +17,10 @@
 
 .addshow-nav input {
   text-align: center;
+  height: 30px;
+  outline: none;
+  border: none;
+  border-radius: 4px;
 }
 
 .addshow-nav button {
@@ -31,25 +35,80 @@
   justify-content: center;
   align-items: flex-start;
   height: 100%;
-
 }
 
 .addshow-main {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ); 
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   padding: 20px;
   gap: 20px;
 }
 
 .addshow-side {
-  display: none;
+  height: 50%;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  margin-top: 50px;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: black 8px 5px 15px;
+  background-color: #E99700;
+  padding: 20px;
+}
+
+.form-search-container {
   height: 100%;
-  width: 30%;
+  width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
+.form-search-container .icon-button {
+  align-self: flex-end;
+  justify-self: start;
+  margin: 15px;
+  transform: scale(1.5);
+  color: #1d5047;
+}
+.form-search-container .icon-button:hover {
+  cursor: pointer;
+  transform: scale(1.7);
+}
 
+.form-search-container form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  align-items: center;
+}
+
+.input-addnew {
+  text-align: center;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  height: 40px;
+}
+
+.form-search-container .btn {
+  margin: 0;
+  width: 50%;
+  height: 50%;
+}
+
+.images-search-container {
+  height: 100%;
+  width: 50%;
+  margin: 5px;
+}
+
+.images-search-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
