--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -9,3 +9,22 @@
   flex-direction: column;
   width: 100vw;
 }
+
+.btn {
+  color: rgba(255, 166, 0, 0.789);
+
+  text-shadow: black 2px 2px ;
+  background-color: #1d5047;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  border-radius: 2px;
+  font-family:'Permanent Marker', cursive; 
+  font-size: 18px;
+}
+
+.btn:hover {
+  box-shadow: black 3px 4px 1.5px;
+  cursor: pointer;
+}
