--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,43 +1,30 @@
 .navbar-container {
   width: 100%;
   height: 100%;
-  background-color: #efd478;
+  background-color: rgba(255, 166, 0, 0.789);
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.navbar-container button {
-  color: #efd478;
-  background-color: #1d5047;
-  padding: 14px 16px;
-  margin: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 0 solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-  outline: 1px solid;
-  outline-color: #e9d9a3;
-  outline-offset: 0px;
-  text-shadow: none;
-  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-  border-radius: 2px;
+  box-shadow: black 0px 2px 10px -5px;
 }
 
 .header {
   padding: 10px;
-  margin-left: 10px;
+  margin-left: 20px;
   font-family: 'Permanent Marker', cursive;
   color:#1d5047; 
+  text-shadow: black 3px 4px 1.5px;
+}
+
+.header:hover {
+  cursor: pointer;
 }
 
 ul {
   list-style-type: none;
   display: flex;
   align-items: center;
+  flex-direction: row-reverse;
+  margin-right: 20px;
 }
 
-.navbar-container button:hover {
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.2);
-}
