--- a/front-end/src/styles/movie-poster.css
+++ b/front-end/src/styles/movie-poster.css
@@ -11,18 +11,18 @@
   overflow: hidden;
 }
 
-.image-container {
+.image-home-container {
   height: 85%;
   width: 100%;
 }
 
-.image-container img {
+.image-home-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.text-container {
+.text-home-container {
   overflow:auto;
   text-align: center;
   height: 15%;
