added gif for readme and adjusted the font of the cards

--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -58,6 +58,8 @@
   box-shadow: black 8px 5px 15px;
   background-color: #E99700;
   padding: 20px;
+  font-size: 12px;
+  text-align: center;
 }
 
 .form-search-container {
