updated single show

--- a/front-end/src/styles/Update.css
+++ b/front-end/src/styles/Update.css
@@ -1,9 +1,19 @@
-.popup {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    background-color: blueviolet;
-    padding: 1rem 1.5rem;
-    width: 24rem;
-    border-radius: 0.5rem;
+
+.update-container input:focus {
+    outline: none;
+  }
+  
+.update-container input {
+    text-align: center;
+    height: 30px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+  }
+
+
+.update-container label{
+    width: 5rem;
+    display: inline-block;
 }
+
