--- a/front-end/src/styles/Update.css
+++ b/front-end/src/styles/Update.css
@@ -17,3 +17,19 @@
     display: inline-block;
 }
 
+
+.update-container {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+.update-btn-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    margin-left: 40px;
+}
