--- a/front-end/src/styles/movie-poster.css
+++ b/front-end/src/styles/movie-poster.css
@@ -2,7 +2,7 @@
   background-color: rgba(255, 166, 0, 0.789);
   color: rgb(58, 58, 58);
   /* padding: 8px; */
-  height: 350px;
+  height: 100%;
   -webkit-transition: all 0.65s ease;
   transition: all 0.65s ease;
   border-radius: 5px;
