--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -8,11 +8,11 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
+  background-color: #2E353E;
 }
 
 .btn {
   color: rgba(255, 166, 0, 0.789);
-
   text-shadow: black 2px 2px ;
   background-color: #1d5047;
   padding: 10px;
