--- a/front-end/src/styles/Homepage.css
+++ b/front-end/src/styles/Homepage.css
@@ -1,21 +1,9 @@
-/* body { */
-/*     background-color: rgb(58, 58, 58); */
-/* } */
-/**/
-/**/
-/* .header{ */
-/*     max-width: 100%; */
-/*     background-color: rgba(255, 166, 0, 0.789); */
-/*     color: black; */
-/*     margin-top: -1rem; */
-/*     padding: 1rem */
-/* } */
-
 .homepage-card-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 2rem;
   padding: 3rem;
+  height:100vh;
 }
 
 @media (max-width: 400px) {
