--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -1,76 +1,45 @@
-body {
-    background-color: #2E353E;
+.login-signup-container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: #2E353E;
+  flex-direction: column;
 }
 
-.login-signup-container{
-    display: grid;
-    gap: 0px;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 5em;
-    position: relative;
-    align-items: start;
-    color: #1D5047;
+.login-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EEAF3A;
+  height: 80%;
+  width: 80%;
+  border-radius: 15px;
+  border: solid #213632 4px;
+  overflow: hidden;
+  box-shadow: black 4px 4px 8px -2px;
+  color: #213632;
 }
 
-.image-container{
-    grid-column: 1;
-    border: solid  #F6D563;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+.form-login-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.image-container img{
-    width: 100%; 
-    height: 100%;
-    object-fit: cover;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+.image-login-container {
+  height: 100%;
+  width: 50%;
+  overflow: hidden;
 }
 
-.form-container{
-    grid-column: 2 ;
-    border: solid #F6D563;
-    background-color: #e9d9a3;
-    padding: 3rem;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
+.image-login-container img {
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
-
-input{
-    margin: 1rem;
-}
-
-label{
-    width: 1rem;
-    display: inline-block;
-}
-
-.login-signup-container button{
-    border: 0 solid;
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-    outline: 1px solid;
-    outline-color: #e9d9a3;
-    outline-offset: 0px;
-    text-shadow: none;
-    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-    width: auto;
-    border-radius: 10px;
-    text-align: center;
-    padding: 15px 40px;
-    background-color: #24857A;
-    font-size: 12px;
-    margin-left: auto;
-    color: #EFD478;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-
-.login-signup-container button:hover{
-    border: 1px solid;
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-    outline-color: #e9d9a3;
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px #427388; 
-}
-  
