--- a/front-end/src/styles/Homepage.css
+++ b/front-end/src/styles/Homepage.css
@@ -1,9 +1,13 @@
+.Homepage {
+  background-color: #2E353E;
+  height: 100%;
+}
+
 .homepage-card-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 2rem;
   padding: 3rem;
-  height:100vh;
 }
 
 @media (max-width: 400px) {
