--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar-container {
   width: 100%;
-  height: 100%;
+  height: 80px;
   background-color: rgba(255, 166, 0, 0.789);
   display: flex;
   justify-content: space-between;
@@ -12,7 +12,7 @@
   padding: 10px;
   margin-left: 20px;
   font-family: 'Permanent Marker', cursive;
-  color:#1d5047; 
+  color: #1d5047;
   text-shadow: black 3px 4px 1.5px;
 }
 
@@ -27,4 +27,3 @@ ul {
   flex-direction: row-reverse;
   margin-right: 20px;
 }
-
