--- a/front-end/src/styles/Update.css
+++ b/front-end/src/styles/Update.css
@@ -9,6 +9,8 @@
     outline: none;
     border: none;
     border-radius: 4px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
 
@@ -16,7 +18,6 @@
     width: 5rem;
     display: inline-block;
 }
-
 
 .update-container {
     margin-left: 30px;
