--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -7,7 +7,7 @@
 .main-page {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #2E353E;
 }
 
