--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -114,3 +114,16 @@
   width: 100%;
   object-fit: contain;
 }
+
+@media (max-width: 700px)  {
+.addshow-side {
+  flex-direction: column;
+  height: 70%;
+  width: 80%;
+  margin-top: 5px;
+}
+
+.form-search-container form {
+  margin-top: 0px;
+}
+}
