--- a/front-end/src/styles/Show.css
+++ b/front-end/src/styles/Show.css
@@ -22,8 +22,8 @@
 
 .single-container {
   width: 80%;
-  background-color: red;
   border-radius: 8px;
+  height: 60%;
   overflow: hidden;
   box-shadow: black 8px 5px 15px;
   background-color: #e99700;
@@ -33,19 +33,22 @@
   padding: 20px;
 }
 
- .single-container .info-container {
+.single-container .info-container {
   margin-left: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
- .single-container .button-container {
+.single-container .button-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 80%;
+  margin: 30px 0px;
 }
 
 .single-container p {
@@ -65,39 +68,11 @@
   color: #cc1b1b;
 }
 
-/* .single-show-container{ */
-/*     display: grid; */
-/*     gap: 0px; */
-/*     grid-template-columns: repeat(3, 1fr); */
-/*     padding: 10em; */
-/*     position: relative; */
-/* } */
-
-/* .show-image-container{ */
-/*     grid-column: 1; */
-/*     border: solid rgb(255, 166, 0); */
-/*     border-top-left-radius: 25px; */
-/*     border-bottom-left-radius: 25px; */
-/* } */
-
-/* .show-image-container img{
-    width: 100%; 
-    height: 100%;
-    object-fit: cover;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-} */
-
-/* .image { */
-/*     height: 100%; */
-/*     background-size: cover; */
-/*   } */
-
-/* .show-text-container { */
-/*     grid-column: 2 / span 2; */
-/*     border: solid rgb(255, 166, 0); */
-/*     background-color: rgb(224, 224, 224); */
-/*     padding: 1rem; */
-/*     border-top-right-radius: 25px; */
-/*     border-bottom-right-radius: 25px; */
-/* } */
+@media (max-width: 800px) {
+  .single-container {
+    height: 90%;
+    width: 90%;
+    flex-direction: column;
+    overflow: auto;
+  }
+}
