--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -38,11 +38,10 @@
 }
 
 .addshow-main {
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  padding: 20px;
-  gap: 20px;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 2.4rem;
+  padding: 3rem;
 }
 
 .addshow-side {
@@ -56,7 +55,8 @@
   border-radius: 15px;
   overflow: hidden;
   box-shadow: black 8px 5px 15px;
-  background-color: #E99700;
+  background-color: #212121;
+  color:#EFDF9D;
   padding: 20px;
   font-size: 12px;
   text-align: center;
@@ -128,6 +128,6 @@
 }
 }
 .selectProgress select{
-  background-color: #1d5047;
-  color:#E99700;
+  background-color: #212121;
+  color:#EFDF9D;
 }
