--- a/front-end/src/components/addShow/style/searchPoster.css
+++ b/front-end/src/components/addShow/style/searchPoster.css
@@ -1,7 +1,7 @@
 .search-cards {
-  background-color: rgba(255, 166, 0, 0.789);
-  color: rgb(58, 58, 58);
-  /* padding: 8px; */
+  background-color: #216657;
+  color: #151515;
+  box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, 0.621);
   height: 350px;
   -webkit-transition: all 0.65s ease;
   transition: all 0.65s ease;
@@ -25,13 +25,14 @@
 .search-text-container {
   overflow: auto;
   text-align: center;
-  height: 15%;
   display: flex;
-  margin-top: 5px;
   justify-content: center;
   align-items: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  color: black;
+  font-family: 'Open Sans', sans-serif;
+  color: #EFDF9D;
+  font-size: 13px;
+  overflow: hidden;
+  height: 40px;
 }
 
 .search-cards:hover {
