--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,23 +1,26 @@
 .navbar-container {
   width: 100%;
   height: 80px;
-  background-color: rgba(255, 166, 0, 0.789);
+  background-color: #262626;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: black 0px 2px 10px -5px;
+  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.514);
+  color: #EFDF9D;
+  font-family: 'Exo 2', sans-serif;
 }
 
 .header {
   padding: 10px;
   margin-left: 20px;
-  font-family: 'Permanent Marker', cursive;
-  color: #1d5047;
-  text-shadow: black 3px 4px 1.5px;
+  color: #EFDF9D;
+  font-family: 'Bellota Text', cursive;
+  line-height: 26px;
 }
 
 .header:hover {
   cursor: pointer;
+  color:#216657;
 }
 
 .navbar-container ul {
@@ -25,7 +28,17 @@
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
+  gap: 20px;
+}
+
+.navbar-container span  {
+  cursor: pointer;
+  font-size: 20px;
   margin-right: 20px;
+}
+
+.navbar-container span:hover{
+  color: #216657;
 }
 
 
