--- a/front-end/src/styles/movie-poster.css
+++ b/front-end/src/styles/movie-poster.css
@@ -1,7 +1,7 @@
 .cards {
-  background-color: rgba(255, 166, 0, 0.789);
+  background-color: #216657;
   color: rgb(58, 58, 58);
-  /* padding: 8px; */
+  box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, 0.621);
   height: 100%;
   -webkit-transition: all 0.65s ease;
   transition: all 0.65s ease;
@@ -12,7 +12,7 @@
 }
 
 .image-home-container {
-  height: 85%;
+  height: 80%;
   width: 100%;
 }
 
@@ -28,10 +28,14 @@
   height: 15%;
   display: flex;
   margin-top: 5px;
+  padding: 20px;
   justify-content: center;
   align-items: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  color: black;
+  font-family: 'Exo 2', sans-serif;
+  text-transform: uppercase;
+  color: #EFDF9D;
+  font-size: 14px;
+  overflow: hidden;
 }
 
 .cards:hover {
