feat: Select season/episode & styling select element

--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -128,6 +128,15 @@
 }
 }
 .selectProgress select{
-  background-color: #212121;
+  background-color: #151515;
   color:#EFDF9D;
+  padding: 10px 5px;
+  border: none;
+  border-radius: 3px;
+  margin-right: 5px;
+  margin-bottom: 20px;
+}
+
+select:focus{
+  outline: none;
 }
