--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -140,3 +140,15 @@
 select:focus{
   outline: none;
 }
+
+.suggestion{
+  background-color: white;
+  cursor: pointer;
+  border-right: 1px black;
+  border-left: 1px black;
+  border-bottom: 1px black;
+}
+
+.suggestion:hover{
+  background-color: gray;
+}
