--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -1,19 +1,18 @@
-
 .login-signup-container {
   display: flex;
   height: 100vh;
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: #2E353E;
+  background-color: #212121;
   flex-direction: column;
 }
 
 .login-card {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  background-color: #EEAF3A;
+  background-color: #216657;
   height: 80%;
   width: 80%;
   border-radius: 15px;
@@ -24,25 +23,27 @@
 }
 
 .form-login-container {
-  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 50%;
+  border-left: solid #213632 1px;
+  box-shadow: -5px 0px 5px 1px rgba(0, 0, 0, 0.714);
+  padding-left: 20px;
 }
 
 .image-login-container {
-  height: 100%;
-  width: 50%;
+  height: stretch;
   overflow: hidden;
+  width: 50%;
 }
 
 .image-login-container img {
   height: 100%;
   width: 100%;
-  padding: 5px;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  object-fit: cover;
 }
 
 .login-card input {
@@ -66,7 +67,9 @@
 }
 
 .login-title h2{
-    font-size: 60px;
+    font-size: 50px;
+    color: #EFDF9D;
+    font-family: 'Bellota Text', cursive;
 }
 
 .login-title h3{
@@ -115,4 +118,19 @@
     align-items: center;
     margin-left: 40%;
 }
+
+
+@media only screen and (max-width: 900px) {
+    .form-login-container {
+        width: 100%;
+        padding: 10px 0 10px 30px;
+      }
+
+      .image-login-container {
+        width: 0;
+        transition: all 0.3s ease-out;
+      }
+  }
+
+
 
