styling: Autocomplete dropdown

--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -115,6 +115,20 @@
   object-fit: contain;
 }
 
+.genre {
+  background-color: #216657;
+  color:#EFDF9D;
+  padding: 5px 0;
+  border: none;
+  border-radius: 3px;
+  font-size: 18px;
+  width: 120px;
+}
+
+.suggestions {
+  position: absolute;
+}
+
 @media (max-width: 700px)  {
 .addshow-side {
   flex-direction: column;
