feat: Solved conflict, fix error 'Genre' in addShowNavBar

--- a/front-end/src/components/addShow/style/addshow.css
+++ b/front-end/src/components/addShow/style/addshow.css
@@ -56,7 +56,7 @@
   overflow: hidden;
   box-shadow: black 8px 5px 15px;
   background-color: #212121;
-  color:#EFDF9D;
+  color: #efdf9d;
   padding: 20px;
   font-size: 12px;
   text-align: center;
@@ -115,9 +115,9 @@
   object-fit: contain;
 }
 
-.genre {
+.Genre {
   background-color: #216657;
-  color:#EFDF9D;
+  color: #efdf9d;
   padding: 5px 0;
   border: none;
   border-radius: 3px;
@@ -129,21 +129,21 @@
   position: absolute;
 }
 
-@media (max-width: 700px)  {
-.addshow-side {
-  flex-direction: column;
-  height: 70%;
-  width: 80%;
-  margin-top: 5px;
-}
+@media (max-width: 700px) {
+  .addshow-side {
+    flex-direction: column;
+    height: 70%;
+    width: 80%;
+    margin-top: 5px;
+  }
 
-.form-search-container form {
-  margin-top: 0px;
+  .form-search-container form {
+    margin-top: 0px;
+  }
 }
-}
-.selectProgress select{
+.selectProgress select {
   background-color: #151515;
-  color:#EFDF9D;
+  color: #efdf9d;
   padding: 10px 5px;
   border: none;
   border-radius: 3px;
@@ -151,11 +151,11 @@
   margin-bottom: 20px;
 }
 
-select:focus{
+select:focus {
   outline: none;
 }
 
-.suggestion{
+.suggestion {
   background-color: white;
   cursor: pointer;
   border-right: 1px black;
@@ -163,6 +163,6 @@ select:focus{
   border-bottom: 1px black;
 }
 
-.suggestion:hover{
+.suggestion:hover {
   background-color: gray;
 }
