--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -17,16 +17,17 @@ body {
 
 .btn {
   color: #EFDF9D;
-  background-color: #1d5047;
+  background-color: #216657;
   padding: 10px;
   margin: 5px;
   border: none;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-  border-radius: 2px;
-  font-size: 18px;
+  border-radius: 4px;
+  font-size: 17px;
 }
 
 .btn:hover {
   box-shadow: black 3px 4px 1.5px;
   cursor: pointer;
+  background-color: #195044;
 }
