styling: Reposition genre select

--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -17,7 +17,7 @@ body {
 
 .btn {
   color: #EFDF9D;
-  background-color: #216657;
+  background-color: #1a5447;
   padding: 10px;
   margin: 5px;
   border: none;
